--- a/src/main.css
+++ b/src/main.css
@@ -3,7 +3,6 @@
 @tailwind components;
 
 .bg-blue-teal-gradient {
-
   background-image: linear-gradient(90deg, rgb(226, 141, 12) 0%, #8f4215 100%);
 }
 
@@ -13,5 +12,12 @@
   @apply pl-10;
 }
 
-@tailwind utilities;
+#menu-toggle:checked + #menu {
+  display: block;
+}
 
+#dropdown-toggle:checked + #dropdown {
+  display: block;
+}
+
+@tailwind utilities;
