--- a/src/main.css
+++ b/src/main.css
@@ -105,7 +105,7 @@
   @apply bg-gray-100 !important;
 }
 
-.bg-blue-teal-gradient {
+.bg-orange-gradient {
   background-image: linear-gradient(90deg, rgb(226, 141, 12) 0%, #8f4215 100%);
 }
 
