--- a/src/main.css
+++ b/src/main.css
@@ -2,6 +2,18 @@
 
 @tailwind components;
 
+.stylistic-quote-mark {
+  font-size: 5rem;
+  right: 100%;
+  @apply mr-2 hidden absolute top-0 leading-none;
+}
+
+@screen sm {
+  .stylistic-quote-mark {
+    @apply block;
+  }
+}
+
 /* Additional vertical padding used by kbd tag. */
 .py-05 {
   padding-top: 0.125rem;
