Add intouch component to project and sector listing pages

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1890,6 +1890,14 @@ select {
     max-width: 28rem;
   }
 
+  .md\:max-w-7xl {
+    max-width: 80rem;
+  }
+
+  .md\:max-w-5xl {
+    max-width: 64rem;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
